--- a/Customer_churn_Data_Cleaning_Analysis.ipynb
+++ b/Customer_churn_Data_Cleaning_Analysis.ipynb
@@ -3962,7 +3962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 295,
    "id": "8eea6fdb-70fb-4075-82d8-fc8a57f33c75",
    "metadata": {},
    "outputs": [
@@ -3970,31 +3970,213 @@
      "data": {
       "text/plain": [
        "mcgrp           Churn\n",
-       "<18.25          No          1\n",
-       "18.26 to 35.5   Yes       198\n",
-       "35.5 to 70.35   Yes       434\n",
-       "89.85+          Yes       578\n",
-       "70.35 to 89.85  Yes       659\n",
-       "                No       1098\n",
-       "89.85+          No       1180\n",
-       "35.5 to 70.35   No       1332\n",
-       "18.26 to 35.5   No       1563\n",
-       "Name: count, dtype: int64"
+       "18.26 to 35.5   No        88.756388\n",
+       "                Yes       11.243612\n",
+       "35.5 to 70.35   No        75.424689\n",
+       "                Yes       24.575311\n",
+       "70.35 to 89.85  No        62.492886\n",
+       "                Yes       37.507114\n",
+       "89.85+          No        67.121729\n",
+       "                Yes       32.878271\n",
+       "<18.25          No       100.000000\n",
+       "Name: proportion, dtype: float64"
       ]
      },
-     "execution_count": 289,
+     "execution_count": 295,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.groupby('mcgrp')['Churn'].value_counts().sort_values()"
+    "df.groupby('mcgrp')['Churn'].value_counts(normalize=True)*100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 296,
+   "id": "921a741f-0bf1-4c41-9556-b2fd63739cea",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>index</th>\n",
+       "      <td>count</td>\n",
+       "      <td>mean</td>\n",
+       "      <td>std</td>\n",
+       "      <td>min</td>\n",
+       "      <td>25%</td>\n",
+       "      <td>50%</td>\n",
+       "      <td>75%</td>\n",
+       "      <td>max</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>TotalCharges</th>\n",
+       "      <td>7043.0</td>\n",
+       "      <td>2281.916928</td>\n",
+       "      <td>2265.270398</td>\n",
+       "      <td>18.8</td>\n",
+       "      <td>402.225</td>\n",
+       "      <td>1397.475</td>\n",
+       "      <td>3786.6</td>\n",
+       "      <td>8684.8</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   0            1            2     3        4         5  \\\n",
+       "index          count         mean          std   min      25%       50%   \n",
+       "TotalCharges  7043.0  2281.916928  2265.270398  18.8  402.225  1397.475   \n",
+       "\n",
+       "                   6       7  \n",
+       "index            75%     max  \n",
+       "TotalCharges  3786.6  8684.8  "
+      ]
+     },
+     "execution_count": 296,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['TotalCharges'].describe().reset_index().transpose()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 297,
+   "id": "e9eb5907-0770-4ae6-97a4-adf52e337a80",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tc = []\n",
+    "for i in df['TotalCharges']:\n",
+    "    if 0<i<=18.8:\n",
+    "        tc.append('<18.8')\n",
+    "    elif 18.8<i<=402.225:\n",
+    "        tc.append('18.8 to 402.225')\n",
+    "    elif 402.225<i<=1397.475:\n",
+    "        tc.append('402.225 to 1397.475')\n",
+    "    elif 1397.475<i<=3786.6:\n",
+    "        tc.append('1397.475 to 3786.6')\n",
+    "    elif 3786.6<i:\n",
+    "        tc.append('3786.6+')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 298,
+   "id": "7f4d6f09-e3fc-4335-93a8-aaec598b8d74",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['tcgrp'] = tc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 314,
+   "id": "95831985-ac9c-41ec-9b8d-420a9c88ee1b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Contract        PaymentMethod              InternetService  mcgrp           tcgrp                tengrp  Churn\n",
+       "Month-to-month  Bank transfer (automatic)  Fiber optic      35.5 to 70.35   18.8 to 402.225      1 year  Yes      100.000000\n",
+       "                                                                            402.225 to 1397.475  1 year  No        75.000000\n",
+       "                                                                                                         Yes       25.000000\n",
+       "                                                            70.35 to 89.85  18.8 to 402.225      1 year  Yes       91.304348\n",
+       "                                                                                                         No         8.695652\n",
+       "                                                                            402.225 to 1397.475  1 year  Yes       70.000000\n",
+       "                                                                                                         No        30.000000\n",
+       "                                                            89.85+          18.8 to 402.225      1 year  Yes      100.000000\n",
+       "                                                                            402.225 to 1397.475  1 year  Yes       88.888889\n",
+       "                                                                                                         No        11.111111\n",
+       "                Credit card (automatic)    Fiber optic      35.5 to 70.35   18.8 to 402.225      1 year  No        50.000000\n",
+       "                                                                                                         Yes       50.000000\n",
+       "                                                                            402.225 to 1397.475  1 year  No       100.000000\n",
+       "                                                            70.35 to 89.85  18.8 to 402.225      1 year  Yes       62.500000\n",
+       "                                                                                                         No        37.500000\n",
+       "                                                                            402.225 to 1397.475  1 year  Yes       53.846154\n",
+       "                                                                                                         No        46.153846\n",
+       "                                                            89.85+          18.8 to 402.225      1 year  Yes       85.714286\n",
+       "                                                                                                         No        14.285714\n",
+       "                                                                            402.225 to 1397.475  1 year  Yes       69.230769\n",
+       "                                                                                                         No        30.769231\n",
+       "                Electronic check           Fiber optic      35.5 to 70.35   18.8 to 402.225      1 year  Yes       69.620253\n",
+       "                                                                                                         No        30.379747\n",
+       "                                                                            402.225 to 1397.475  1 year  No        50.000000\n",
+       "                                                                                                         Yes       50.000000\n",
+       "                                                            70.35 to 89.85  18.8 to 402.225      1 year  Yes       77.682403\n",
+       "                                                                                                         No        22.317597\n",
+       "                                                                            402.225 to 1397.475  1 year  Yes       57.792208\n",
+       "                                                                                                         No        42.207792\n",
+       "                                                            89.85+          18.8 to 402.225      1 year  Yes       78.260870\n",
+       "                                                                                                         No        21.739130\n",
+       "                                                                            402.225 to 1397.475  1 year  Yes       76.190476\n",
+       "                                                                                                         No        23.809524\n",
+       "                Mailed check               Fiber optic      35.5 to 70.35   18.8 to 402.225      1 year  Yes       71.428571\n",
+       "                                                                                                         No        28.571429\n",
+       "                                                                            402.225 to 1397.475  1 year  No        50.000000\n",
+       "                                                                                                         Yes       50.000000\n",
+       "                                                            70.35 to 89.85  18.8 to 402.225      1 year  Yes       65.079365\n",
+       "                                                                                                         No        34.920635\n",
+       "                                                                            402.225 to 1397.475  1 year  Yes       54.545455\n",
+       "                                                                                                         No        45.454545\n",
+       "                                                            89.85+          18.8 to 402.225      1 year  No        83.333333\n",
+       "                                                                                                         Yes       16.666667\n",
+       "                                                                            402.225 to 1397.475  1 year  Yes       83.333333\n",
+       "                                                                                                         No        16.666667\n",
+       "Name: proportion, dtype: float64"
+      ]
+     },
+     "execution_count": 314,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.where((df['tengrp']=='1 year') & (df['Contract']=='Month-to-month') & (df['InternetService']=='Fiber optic')).groupby(\n",
+    "    ['Contract','PaymentMethod','InternetService','mcgrp','tcgrp','tengrp'])['Churn'].value_counts(normalize=True)*100"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "921a741f-0bf1-4c41-9556-b2fd63739cea",
+   "id": "67cc400b-2a79-4ddf-bad8-83f43dbca775",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4009,7 +4191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 299,
    "id": "45383858-7138-415c-95b2-677129f014b8",
    "metadata": {},
    "outputs": [
@@ -4058,6 +4240,7 @@
        "      <th>tengrp</th>\n",
        "      <th>churn</th>\n",
        "      <th>mcgrp</th>\n",
+       "      <th>tcgrp</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -4087,6 +4270,7 @@
        "      <td>1 year</td>\n",
        "      <td>0</td>\n",
        "      <td>18.26 to 35.5</td>\n",
+       "      <td>18.8 to 402.225</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -4114,6 +4298,7 @@
        "      <td>3 year</td>\n",
        "      <td>0</td>\n",
        "      <td>35.5 to 70.35</td>\n",
+       "      <td>1397.475 to 3786.6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -4141,6 +4326,7 @@
        "      <td>1 year</td>\n",
        "      <td>1</td>\n",
        "      <td>35.5 to 70.35</td>\n",
+       "      <td>18.8 to 402.225</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -4168,6 +4354,7 @@
        "      <td>4 year</td>\n",
        "      <td>0</td>\n",
        "      <td>35.5 to 70.35</td>\n",
+       "      <td>1397.475 to 3786.6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -4195,6 +4382,7 @@
        "      <td>1 year</td>\n",
        "      <td>1</td>\n",
        "      <td>70.35 to 89.85</td>\n",
+       "      <td>18.8 to 402.225</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -4229,15 +4417,15 @@
        "3               No  Bank transfer (automatic)           42.30       1840.75   \n",
        "4              Yes           Electronic check           70.70        151.65   \n",
        "\n",
-       "  Churn  tengrp  churn           mcgrp  \n",
-       "0    No  1 year      0   18.26 to 35.5  \n",
-       "1    No  3 year      0   35.5 to 70.35  \n",
-       "2   Yes  1 year      1   35.5 to 70.35  \n",
-       "3    No  4 year      0   35.5 to 70.35  \n",
-       "4   Yes  1 year      1  70.35 to 89.85  "
+       "  Churn  tengrp  churn           mcgrp               tcgrp  \n",
+       "0    No  1 year      0   18.26 to 35.5     18.8 to 402.225  \n",
+       "1    No  3 year      0   35.5 to 70.35  1397.475 to 3786.6  \n",
+       "2   Yes  1 year      1   35.5 to 70.35     18.8 to 402.225  \n",
+       "3    No  4 year      0   35.5 to 70.35  1397.475 to 3786.6  \n",
+       "4   Yes  1 year      1  70.35 to 89.85     18.8 to 402.225  "
       ]
      },
-     "execution_count": 285,
+     "execution_count": 299,
      "metadata": {},
      "output_type": "execute_result"
     }
